--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ h1 {
   background-color: rgba(199, 255, 125, 0.6);
   border-radius: 17px;
   padding-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 img{
