--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 img{
-  border-radius: 60px;
+  border-radius: 60%;
   border: 16px solid rgb(230, 88, 112);
   margin: 0 auto;
   max-width: 400px;
