--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,10 @@ h1 {
 }
 
 img{
-  border-radius: 60%;
+  border-radius: 60px;
   border: 16px solid rgb(230, 88, 112);
   margin: 0 auto;
+  width: 60%;
   max-width: 400px;
 }
 
